--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -5,7 +5,7 @@
    width: 100%;
    z-index: 2;
 }
-.navSet {color: #414141;}
+.navSet, .navSet:hover {color: #414141;}
 .navBtn {background: white; border: none; padding: 0;}
 .navBtn:focus {outline: none;}
 .userRedBtn {background: indianred; border: none; color: white;}
@@ -17,10 +17,11 @@
       display: flex;
       flex-direction: row;
       font-size: 1vw;
-      padding: 1% 7%;
+      justify-content: center;
+      padding: 1%;
    }
    .logoTickitz {height: 1.5vw; width: 6vw;}
-   .gapBetweenBtn {margin: 0 1vw;}
+   .gapBetweenBtn {margin: 0 1.7vw;}
    .hamMenu {display: none;}
    .allRightsReserved {display: none;}
    .searchLogo {height: 1vw; width: 1vw;}
