--- a/src/pages/main/TicketResult/style.css
+++ b/src/pages/main/TicketResult/style.css
@@ -2,7 +2,6 @@
 .greyOutsideTicketResult {align-items: center; background: #F5F6F8; display: flex; flex-direction: column; width: 100%;}
 .downloadAndPrint {display: flex; flex-direction: row;}
 .downloadBtn, .printBtn {align-items: center; display: flex; flex-direction: row;}
-.ticketResult {display: flex; flex-direction: row; justify-content: center; width: 100%;}
 .leftTicketResult, .rightTicketResult {display: flex; flex-direction: column;}
 .topLeftTicket, .topRightTicket {background: #5F2EEA; width: 100%;}
 .bottomLeftTicket, .bottomRightTicket {background: white; width: 100%;}
@@ -13,10 +12,12 @@
 .widthThirty {width: 30%;}
 .widthFourty {width: 40%;}
 .widthFifty {width: 50%;}
+.admitOneTicket {color: white;}
 
 
 /* DESKTOP */
 @media(min-width: 768px){
+   .ticketResult {display: flex; flex-direction: row; justify-content: center; width: 100%;}
    .purpleOutsideTicketResult {padding: 4vw 12vw;}
    .greyOutsideTicketResult {border-radius: 1vw; height: auto; padding: 0 5vw;}
    .proofText {font-size: 1.5vw; margin: 3vw;}
@@ -35,8 +36,32 @@
    .downloadAndPrint {font-size: 1vw; justify-content: space-between; margin: 3vw; width: 33%;}
    .downloadBtn, .printBtn {border: 0.1vw solid #434B66; border-radius: 0.3vw; padding: 0.5vw 2vw;}
    .downloadBtn:hover, .printBtn:hover {cursor: pointer; opacity: 0.5;}
+   .downloadAndPrintBtnLogo {margin-right: 1vw; width: 1.5vw;}
+   .admitOneTicket {font-size: 1vw;}
+   .barcodeDummy {height: 88%; margin-top: 0.5vw;}
 }
 
 /* MOBILE */
 @media(max-width: 768px){
+   .ticketResult {align-items: center; display: flex; flex-direction: column; width: 100%;}
+   .purpleOutsideTicketResult {padding: 5.5vw;}
+   .greyOutsideTicketResult {border-radius: 1vw; height: auto; padding: 0 5vw;}
+   .proofText {font-size: 5.5vw; margin: 3vw;}
+   .leftTicketResult, .rightTicketResult {width: 88%;}
+   .leftTicketResult {margin: 5.5vw 0;}
+   .tickitzTicketResultLogo {width: 15vw;}
+   .topLeftTicket, .topRightTicket {align-items: center;  display: flex; flex-direction: row; justify-content: center; padding: 3vw;}
+   .topLeftTicket {align-items: center; border-radius: 2.5vw 2.5vw 0 0; justify-content: space-between;}
+   .topRightTicket {border-radius: 2.5vw 2.5vw 0 0; text-align: center;}
+   .bottomLeftTicket {border-radius: 0 0 2.5vw 2.5vw; padding: 2vw 3vw;}
+   .ticketLittleTitle {color: grey; font-size: 2.5vw;}
+   .ticketTitleContent {font-size: 2.5vw; margin: 0.5vw 0;}
+   .bottomRightTicket {border-radius: 0 0 2.5vw 2.5vw; justify-content: center;}
+   .insideBottomRightTicket {display: flex; flex-direction: column; justify-content: space-between; padding: 1vw; width: 80%;}
+   .downloadAndPrint {font-size: 3.3vw; justify-content: space-between; margin: 7.7vw; width: 88%;}
+   .downloadBtn, .printBtn {border: 0.1vw solid #434B66; border-radius: 1vw; justify-content: center; padding: 2vw; width: 48%;}
+   .downloadBtn:hover, .printBtn:hover {cursor: pointer; opacity: 0.5;}
+   .downloadAndPrintBtnLogo {height: 18px; margin-right: 12px; width: 18px;}
+   .admitOneTicket {font-size: 2.5vw;}
+   .barcodeDummy {margin: 1.1vw 0; width: 11%;}
 }
