--- a/src/components/ShowtimesAndTickets/style.css
+++ b/src/components/ShowtimesAndTickets/style.css
@@ -43,5 +43,37 @@
 
 /* MOBILE */
 @media (max-width: 768px){
-
+   .showtimesAndTickets{
+      height: auto;
+      margin-bottom: 3vw;
+      padding: 4% 8%;
+   }
+   .showtimesTicketsTextBig {font-size: 5.5vw; margin-top: 5.5vw;}
+   .twoShowtimesButtons {
+      display: flex;
+      flex-direction: column;
+      font-size: 4vw;
+      justify-content: space-between;
+      width: 100%;
+   }
+   .oneOfTheShowtimesButtons {
+      align-items: center;
+      background: #EFF0F6;
+      border-radius: 1.5vw;
+      margin: 2% 1% 4% 1%;
+      padding: 3.3vw;
+   }
+   .showtimesLogo { height: 5.5vw; margin-right: 5.5vw; width: 5.5vw; }
+   .locationDropdown {
+      background: #EFF0F6;
+      display: flex;
+      flex-direction: row;
+      font-size: 4vw;
+      justify-content: space-between;
+      margin-right: 55vw;
+      text-align: left;
+      width: 5.5vw;
+   }
+   .locationDropdown, .locationToggle { padding: 0; }
+   .locationLogo {height: 1vw; width: 1vw;}
 }
