--- a/src/components/other/parts/Button/style.css
+++ b/src/components/other/parts/Button/style.css
@@ -17,3 +17,13 @@
       padding: 0.7vw 2.1vw;
    }
 }
+
+/* MOBILE */
+@media (max-width: 768px){
+   .purpleButtonComponent, .transparentButtonComponent {
+      border-radius: 1.5vw;
+      font-size: 4vw;
+      font-weight: 600;
+      padding: 1.5vw 4.5vw;
+   }
+}
