--- a/src/components/other/parts/OrderHistory/style.css
+++ b/src/components/other/parts/OrderHistory/style.css
@@ -27,9 +27,39 @@
    .ticketActive {background: #00BA88;}
    .ticketUsed {background: #6E7191;}
    .ticketExpired {background: indianred;}
+   .orderPaginationAreaZone, .paginationButton {align-items: center; display: flex; flex-direction: row; justify-content: center;}
+   .paginationButton {border: 0.1vw solid #5F2EEA; border-radius: 0.5vw; cursor: pointer; font-size: 1.1vw; height: 3vw; margin: 3vw 0.5vw; padding: 1vw; width: 3vw;}
 }
 
 /* MOBILE */
 @media (max-width: 768px){
-
+   .orderHistoryCard {
+      background: white;
+      border-radius: 1.5vw;
+      margin: 3.3vw 0;
+      width: 100%;
+   }
+   .dateAndMovieText {
+      display: flex;
+      flex-direction: column;
+   }
+   .orderHistoryTop {border-bottom: 0.1vw solid #DEDEDE;}
+   .orderHistoryTop, .orderHistoryBottom {
+      align-items: center;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      padding: 3.3%;
+      width: 100%;
+   }
+   .orderHistoryShowDate {color: #AAAAAA; font-size: 2.5vw; margin: 0;}
+   .orderHistoryMovieName {color: black; font-size: 4vw; width: 55vw;}
+   .orderHistoryCinemaImg {height: 5vw; width: 15vw;}
+   .orderHistoryTicketStatus {border-radius: 1.5vw; color: white; font-size: 2.5vw; font-weight: 600; padding: 1.5vw 0; text-align: center; width: 50%;}
+   .ticketPending {background: #5F2EEA;}
+   .ticketActive {background: #00BA88;}
+   .ticketUsed {background: #6E7191;}
+   .ticketExpired {background: indianred;}
+   .orderPaginationAreaZone, .paginationButton {align-items: center; display: flex; flex-direction: row; justify-content: center;}
+   .paginationButton {border: 0.1vw solid #5F2EEA; border-radius: 1.5vw; cursor: pointer; font-size: 4vw; height: 11vw; margin: 5.5vw 1.5vw; padding: 1vw; width: 11vw;}
 }
