--- a/src/pages/main/PaymentPage/style.css
+++ b/src/pages/main/PaymentPage/style.css
@@ -24,5 +24,17 @@
 
 /* MOBILE */
 @media(max-width: 768px){
-
+   .paymentPage {display: flex; flex-direction: column; justify-content: space-between; padding: 3vw 7vw;}
+   .paymentPageTitle {font-size: 4vw; margin: 5vw 0 2.5vw 0 !important;}
+   .paymentPageInputLabel {color: #696F79; font-size: 2.5vw;}
+   .paymentPageInput {border: 0.1vw solid #DEDEDE; border-radius: 1vw; font-size: 4vw; margin-top: 1.5vw; margin-bottom: 4.5vw; padding: 2.5vw; width: 100%;}
+   .insidePaymentPageWhite {border-radius: 0.5vw; margin-top: 1vw; margin-bottom: 2vw; padding: 5.5vw !important;}
+   .insidePaymentPageWhiteAgain {border-bottom: 0.1vw solid #E6E6E6; display: flex; flex-direction: row; font-size: 2.5vw; justify-content: space-between; padding: 2.5vw 0; width: 100%;}
+   .choosePaymentMethodRow {align-items: center; display: flex; flex-direction: row; justify-content: space-between; width: 100%;}
+   .paymentMethodBtn {border: 0.1vw solid #DEDEDE; border-radius: 1vw; padding: 1vw; text-align: center; width: 17vw;}
+   .paymentMethodBtn:hover {cursor: pointer; opacity: 0.5;}
+   .paymentMethodImg {border-radius: 0.5vw; height: 100%; width: 100%;}
+   .payYourOrderZone {margin: 10vw 0; text-align: center; width: 100%;}
+   .payYourOrderBtn {background: #5F2EEA; border-radius: 1vw; padding: 2.5vw 10vw; color: white;}
+   .payYourOrderBtn:hover {color: white; opacity: 0.5;}
 }
